--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^5.10.2",
+    "@prisma/client": "^5.10.2",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "@vercel/postgres": "^0.7.2",
     "next": "latest",
+    "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.4.35",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.0"
   }
 }
