--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-POSTGRES_URL=
+POSTGRES_URL="postgres://postgres:123456@120.53.243.253:5432/todolistdb"
+POSTGRES_PRISMA_URL="postgres://postgres:123456@120.53.243.253:5432/todolistdb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://postgres:23456@120.53.243.253:5432/todolistdb"
+POSTGRES_URL_NON_POOLING="postgres://postgres:120.53.243.253:5432/todolistdb"
+POSTGRES_USER="postgres"
+POSTGRES_HOST="120.53.243.253"
+POSTGRES_PASSWORD="123456"
+POSTGRES_DATABASE="todolistdb"
+
+
