--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@vercel/postgres": "^0.7.2",
+    "cookie": "^0.6.0",
     "next": "latest",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
