feat:add database

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
-POSTGRES_URL="postgres://postgres:123456@120.53.243.253:5432/todolistdb"
-POSTGRES_PRISMA_URL="postgres://postgres:123456@120.53.243.253:5432/todolistdb?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://postgres:23456@120.53.243.253:5432/todolistdb"
-POSTGRES_URL_NON_POOLING="postgres://postgres:120.53.243.253:5432/todolistdb"
+POSTGRES_URL="postgres://postgres:zh3tGaVeMoKGGFvr@120.53.243.253:5432/todolistdb"
+POSTGRES_PRISMA_URL="postgres://postgres:zh3tGaVeMoKGGFvr@120.53.243.253:5432/todolistdb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://postgres:zh3tGaVeMoKGGFvr@120.53.243.253:5432/todolistdb"
+POSTGRES_URL_NON_POOLING="postgres://postgres:zh3tGaVeMoKGGFvr@120.53.243.253:5432/todolistdb"
 POSTGRES_USER="postgres"
 POSTGRES_HOST="120.53.243.253"
-POSTGRES_PASSWORD="123456"
+POSTGRES_PASSWORD="zh3tGaVeMoKGGFvr"
 POSTGRES_DATABASE="todolistdb"
 
+
+GOOGLE_CLIENT_ID='1034214810997-4qsv8ehn512200i7iijuoolinm5kobvq.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET= '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'
+NEXTAUTH_URL= 'http://localhost:3000'
+NEXTAUTH_SECRET ='2bf0fa1d7db9ecd60b2c436978513d3c1c5536a8'
+GITHUB_ID= '34bb589bc6c073bd23e2'
+GITHUB_SECRET= '84f9fe70b785456eb92fdc218ba90ed0518e2be1'
 
