--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^5.10.2",
     "@prisma/client": "^5.10.2",
     "@types/node": "20.10.6",
@@ -14,16 +15,20 @@
     "@types/react-dom": "18.2.18",
     "@vercel/postgres": "^0.7.2",
     "cookie": "^0.6.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "latest",
+    "next-auth": "^4.24.7",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-cookie": "^7.1.0",
     "react-dom": "18.2.0",
     "typescript": "5.3.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "autoprefixer": "^10.0.1",
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
