--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "private": true,
   "scripts": {
     "postinstall": "npx prisma generate",
-    "dev": "next dev --turbo",
+    "dev": "npm run kill; next dev --turbo",
     "build": "npx prisma generate && next build",
-    "start": "next start"
+    "start": "next start",
+    "kill": "lsof -ti :3000 >/dev/null && lsof -ti :3000  | xargs kill -9"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.2.10",
     "@prisma/adapter-pg": "^5.10.2",
     "@prisma/client": "^5.10.2",
     "@types/node": "20.10.6",
@@ -15,6 +17,7 @@
     "@types/react-dom": "18.2.18",
     "@vercel/postgres": "^0.7.2",
     "cookie": "^0.6.0",
+    "framer-motion": "^11.0.24",
     "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "next-auth": "^4.24.7",
@@ -23,6 +26,7 @@
     "react": "18.2.0",
     "react-cookie": "^7.1.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.5",
     "typescript": "5.3.3",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
