--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@vercel/postgres": "^0.7.2",
+    "@zach.codes/react-calendar": "^0.3.3",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.24",
     "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "next-auth": "^4.24.7",
+    "parse-url": "^9.0.1",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
